# C-Exercises

./: CMakeLists.txt  READEME.md  README.md  TD1.cpp  TD2.cpp  TD4.c  TD5.c  TP1_first_part.c  TP1_second_part.c  binary_search.c  racine_newton.c  sort_functions.c
